--- a/package.json
+++ b/package.json
@@ -3,38 +3,35 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "5.2.0"
+    "version": "6.3.0"
   },
   "dependencies": {
-    "algoliasearch": "^4.8.3",
-    "cloudinary": "^1.23.0",
-    "deepmerge": "^4.2.2",
-    "hexo": "^5.2.0",
-    "hexo-algoliasearch": "^0.3.2",
-    "hexo-cli": "^4.3.0",
-    "hexo-deployer-git": "^4.0.0",
-    "hexo-deployer-rsync": "^2.0.0",
-    "hexo-deployer-sftp": "^0.4.1",
-    "hexo-generator-alias": "^0.1.3",
-    "hexo-generator-archive": "^1.0.0",
-    "hexo-generator-basic-set": "^0.1.1",
-    "hexo-generator-category": "^1.0.0",
-    "hexo-generator-feed": "^3.0.0",
-    "hexo-generator-index": "^1.0.0",
-    "hexo-generator-multilingual-feed": "^1.1.0",
-    "hexo-generator-search": "^2.4.1",
-    "hexo-generator-sitemap": "^2.1.0",
-    "hexo-generator-tag": "^1.0.0",
-    "hexo-inject": "^1.0.0",
-    "hexo-math": "^3.0.4",
-    "hexo-multilingual": "^0.6.0",
-    "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-markdown-it": "^7.0.0",
-    "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0",
-    "highlight.js": "^10.4.1",
-    "jquery": "^3.5.1",
-    "jsdom": "^16.5.0",
-    "katex": "^0.11.1"
+    "algoliasearch": "4.16.0",
+    "deepmerge": "4.3.1",
+    "hexo": "6.3.0",
+    "hexo-algoliasearch": "github:LouisBarranqueiro/hexo-algoliasearch",
+    "hexo-cli": "4.3.0",
+    "hexo-deployer-git": "4.0.0",
+    "hexo-deployer-rsync": "2.0.0",
+    "hexo-generator-alias": "0.1.3",
+    "hexo-generator-archive": "1.0.0",
+    "hexo-generator-basic-set": "0.1.1",
+    "hexo-generator-category": "1.0.0",
+    "hexo-generator-feed": "3.0.0",
+    "hexo-generator-index": "1.0.0",
+    "hexo-generator-search": "2.4.3",
+    "hexo-generator-sitemap": "2.2.0",
+    "hexo-generator-tag": "1.0.0",
+    "hexo-inject": "1.0.0",
+    "hexo-math": "3.0.4",
+    "hexo-multilingual": "0.6.0",
+    "hexo-renderer-ejs": "2.0.0",
+    "hexo-renderer-markdown-it": "7.0.0",
+    "hexo-renderer-stylus": "1.1.0",
+    "hexo-server": "1.0.0",
+    "highlight.js": "10.7.3",
+    "jquery": "3.6.4",
+    "jsdom": "16.7.0",
+    "katex": "0.11.1"
   }
 }
